--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ body {
   font-family: "roboto";
 }
 
-header {
+.header {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,9 +39,19 @@ header {
   margin-top: -60px;
   z-index: 10;
 }
-header img {
+.header img {
   height: 35px;
   width: auto;
+}
+.header--resto {
+  margin-top: 0;
+}
+.header--resto__retour {
+  font-size: 22px;
+  line-height: 30px;
+  position: absolute;
+  left: 4%;
+  top: 18px;
 }
 
 .localisation {
@@ -88,7 +98,7 @@ header img {
   border-radius: 42px;
   transition: all 0.45s ease-in;
 }
-.description__ancre:hover {
+.description__ancre:hover, .description__ancre:focus {
   box-shadow: inset -5px -20px 70px -15px #FF79DA;
 }
 
@@ -195,7 +205,7 @@ header img {
   right: 19px;
   bottom: 29px;
 }
-.resto__fav--faved:hover {
+.resto__fav--faved:hover, .resto__fav--faved:focus {
   background: linear-gradient(#9356DC, #FF79DA);
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -209,9 +219,10 @@ header img {
 .footer__svg {
   height: 21px;
   margin-bottom: 15px;
+  margin-left: -10px;
 }
 .footer__li {
-  margin-left: 35px;
+  margin-left: 25px;
 }
 .footer__lien {
   color: white;
@@ -223,8 +234,133 @@ header img {
   font-size: 18px;
   width: 35px;
 }
-.footer__lien:hover {
+.footer__lien:hover, .footer__lien:focus {
   text-decoration: underline;
+}
+
+.top {
+  height: 240px;
+  width: 100%;
+  margin-bottom: -30px;
+  padding-top: 60px;
+  overflow: hidden;
+}
+.top__photo {
+  height: 240px;
+  width: 100%;
+  position: fixed;
+  z-index: -1;
+  object-fit: cover;
+}
+
+.menuMaker {
+  background-color: #F6F6F6;
+  padding-top: 25px;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+}
+.menuMaker__topDiv {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menuMaker__topDiv__titre {
+  font-family: "shrikhand";
+  font-size: 27px;
+  padding-left: 4%;
+}
+.menuMaker__topDiv__fav {
+  color: #666;
+  font-size: 27px;
+  padding-right: 5%;
+}
+.menuMaker__partie {
+  padding-left: 4%;
+  font-weight: normal;
+  font-size: 20px;
+}
+.menuMaker__liste {
+  padding: 0 4%;
+}
+.menuMaker__bottomDiv {
+  height: 150px;
+  padding-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.menuMaker__bottomDiv__valider {
+  background-color: #9356DC;
+  box-shadow: inset 10px 35px 70px -15px #FF79DA;
+  color: white;
+  font-size: 18px;
+  padding: 20px 20px;
+  border-radius: 42px;
+  transition: all 0.45s ease-in;
+  padding: 20px 50px;
+}
+.menuMaker__bottomDiv__valider:hover, .menuMaker__bottomDiv__valider:focus {
+  box-shadow: inset -5px -20px 70px -15px #FF79DA;
+}
+
+.assiette {
+  background-color: white;
+  border-radius: 16px;
+  height: 70px;
+  margin: 20px 0;
+  overflow: hidden;
+  position: relative;
+  animation: 1s linear loading;
+  box-shadow: -1px 3px 10px 1px #AAA;
+}
+.assiette__lien {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.assiette__description {
+  line-height: 24px;
+  font-size: 16px;
+  padding: 0 0 10px 10px;
+  width: calc(100% - 50px);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.assiette__nom {
+  font-size: 18px;
+  font-weight: bold;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.assiette__prix {
+  line-height: 24px;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 0 15px 10px 0;
+}
+.assiette__select {
+  width: 0px;
+  height: 100%;
+  background-color: #99E2D0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  transition: all 0.4s linear;
+}
+.assiette__select__icon {
+  font-size: 24px;
+  color: white;
+  transition: all 0.4s linear;
+}
+.assiette:hover .assiette__select, .assiette:focus .assiette__select {
+  width: 80px;
+}
+.assiette:hover .assiette__select__icon, .assiette:focus .assiette__select__icon {
+  transform: rotate(1turn);
 }
 
 @media screen and (min-width: 768px) {
