--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,7 +174,13 @@ body {
   background-color: white;
   position: relative;
   z-index: 0;
+  transition: box-shadow 0.4s linear, transform 0.4s;
+  animation: 1.5s ease-out load;
   box-shadow: -1px 3px 10px 1px #AAA;
+}
+.resto:hover, .resto:focus {
+  box-shadow: -2px 6px 20px 2px #666;
+  transform: scale(1.002);
 }
 .resto__photo {
   height: 200px;
@@ -267,17 +273,37 @@ body {
 .menuMaker__topDiv__titre {
   font-family: "shrikhand";
   font-size: 27px;
-  padding-left: 4%;
+  padding: 0 14% 0 4%;
 }
 .menuMaker__topDiv__fav {
+  font-size: 30px;
   color: #666;
-  font-size: 27px;
-  padding-right: 5%;
+  position: absolute;
+  z-index: 1;
+  right: 5%;
+}
+.menuMaker__topDiv__fav--faved {
+  font-size: 30px;
+  color: transparent;
+  background: none;
+  position: absolute;
+  z-index: 1;
+  right: 5%;
+}
+.menuMaker__topDiv__fav--faved:hover, .menuMaker__topDiv__fav--faved:focus {
+  background: linear-gradient(#9356DC, #FF79DA);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
 }
 .menuMaker__partie {
-  padding-left: 4%;
+  width: 45px;
+  margin-left: 1%;
+  padding: 30px 0 5px 0;
+  color: #555;
   font-weight: normal;
-  font-size: 20px;
+  font-size: 18px;
+  border-bottom: 4px solid #99E2D0;
 }
 .menuMaker__liste {
   padding: 0 4%;
@@ -304,13 +330,14 @@ body {
 }
 
 .assiette {
+  width: max;
   background-color: white;
   border-radius: 16px;
   height: 70px;
   margin: 20px 0;
   overflow: hidden;
   position: relative;
-  animation: 1s linear loading;
+  animation: 1.5s ease-out load;
   box-shadow: -1px 3px 10px 1px #AAA;
 }
 .assiette__lien {
@@ -363,6 +390,19 @@ body {
   transform: rotate(1turn);
 }
 
+@keyframes load {
+  0% {
+    opacity: 0;
+    margin-top: 40px;
+  }
+  10% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 20px;
+  }
+}
 @media screen and (min-width: 768px) {
   .description {
     height: 180px;
@@ -395,6 +435,30 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+  }
+
+  .top {
+    height: 320px;
+  }
+  .top__photo {
+    height: 320px;
+  }
+
+  .menuMaker__grandiv {
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .top {
+    height: 400px;
+  }
+  .top__photo {
+    height: 400px;
+  }
+
+  .menuMaker__grandiv {
+    grid-template-columns: 33% 33% 33%;
   }
 }
 
