--- a/main.scss
+++ b/main.scss
@@ -181,7 +181,13 @@ body {
     background-color: white;
     position: relative;
     z-index: 0;
+    transition: box-shadow 0.4s linear, transform 0.4s;
+    animation: 1.5s ease-out load;
     @include shadow;
+    &:hover, &:focus {
+        box-shadow: -2px 6px 20px 2px #666;
+        transform: scale(1.002);
+    }
     &__photo {
         height: 200px;
         width: 100%;
@@ -269,18 +275,38 @@ body {
         &__titre {
             font-family: 'shrikhand';
             font-size: 27px;
-            padding-left: 4%;
+            padding: 0 14% 0 4%;
         }
         &__fav {
+            font-size: 30px;
             color: #666;
-            font-size: 27px;
-            padding-right: 5%;
+            position: absolute;
+            z-index: 1;
+            right: 5%;
+            &--faved {
+                font-size: 30px;
+                color: transparent;
+                background: none;
+                position: absolute;
+                z-index: 1;
+                right: 5%;
+                &:hover, &:focus {
+                    background: linear-gradient($primaire, $secondaire);
+                    -webkit-background-clip: text;
+                    -moz-background-clip: text;
+                    background-clip: text;
+                }
+            }
         }
     }
     &__partie {
-        padding-left: 4%;
+        width: 45px;
+        margin-left: 1%;
+        padding: 30px 0 5px 0;
+        color: #555;
         font-weight: normal;
-        font-size: 20px;
+        font-size: 18px;
+        border-bottom: 4px solid $tertiaire;
     }
     &__liste {
         padding: 0 4%;
@@ -301,13 +327,14 @@ body {
     }
 }
 .assiette {
+    width: max;
     background-color: white;
     border-radius: 16px;
     height: 70px;
     margin: 20px 0;
     overflow: hidden;
     position: relative;
-    animation: 1s linear loading;
+    animation: 1.5s ease-out load;
     @include shadow;
     &__lien {
         height: 100%;
@@ -360,6 +387,19 @@ body {
         }
     }
 }
+@keyframes load{
+    0% {
+        opacity: 0;
+        margin-top: 40px;
+    }
+    10% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+        margin-top: 20px;
+    }
+}
 @media screen and (min-width: 768px) {
     .description {
         height: 180px;
@@ -395,4 +435,29 @@ body {
             flex-direction: column;
         }
     }
+    .top {
+        height: 320px;
+        &__photo {
+            height: 320px;
+        }
+    }
+    .menuMaker {
+        &__grandiv {
+            display: grid;
+            grid-template-columns: 50% 50%;
+        }
+    }
 }
+@media screen and (min-width: 1024px) {
+    .top {
+        height: 400px;
+        &__photo {
+            height: 400px;
+        }
+    }
+    .menuMaker {
+        &__grandiv {
+            grid-template-columns: 33% 33% 33%;
+        }
+    }
+} 
