--- a/main.scss
+++ b/main.scss
@@ -1,463 +1,32 @@
-@font-face {
-    font-family: 'shrikhand';
-    src: url('../font/Shrikhand-Regular.ttf') format('truetype');
-    font-weight: normal;
-}
-@font-face {
-    font-family: 'roboto';
-    src: url('../font/Roboto-Regular.ttf') format('truetype');
-    font-weight: normal;
-}
-@font-face {
-    font-family: 'roboto';
-    src: url('../font/Roboto-Bold.ttf') format('truetype');
-    font-weight: bold;
-}
-/******* VARIABLES *******/
-$primaire: #9356DC;
-$secondaire: #FF79DA;
-$tertiaire: #99E2D0;
-
-/******* MIXINS *******/
-@mixin bouton {
-    background-color: $primaire;
-    box-shadow: inset 10px 35px 70px -15px $secondaire;
-    color: white;
-    font-size: 18px;
-    padding: 20px 20px;
-    border-radius: 42px;
-    transition: all 0.45s ease-in;
-}
-@mixin bouton--hover {
-    box-shadow: inset -5px -20px 70px -15px $secondaire;
-}
-@mixin shadow {
-    box-shadow: -1px 3px 10px 1px #AAA;
-}
-* {
-    text-decoration: none;
-    list-style-type: none;
-    color: black;
-    margin: 0;
-    padding-inline-start: 0;
-}
-body {
-    font-family: 'roboto';
-}
-.header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    box-shadow: 0px 4px 10px #AAA;
-    position: fixed;
-    height: 60px;
-    width: 100%;
-    margin-top: -60px;
-    z-index: 10;
-    img {
-        height: 35px;
-        width: auto;
-    }
-    &--resto {
-        margin-top: 0;
-        &__retour {
-            font-size: 22px;
-            line-height: 30px;
-            position: absolute;
-            left: 4%;
-            top: 18px;
-        }
-    }
-}
-.localisation {
-    background-color: #DDD;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    height: 60px;
-    width: 100%;
-    margin-top: 60px;
-    i {
-        margin-right: 15px;
-    }
-}
-.description {
-    background-color: #EEE;
-    height: 220px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 40px 0px;
-    margin-bottom: 20px;
-    &__titre {
-        margin: 0;
-        width: 65%;
-        text-align: center;
-    }
-    &__texte {
-        width: 80%;
-        text-align: center;
-        color: #555;
-        font-size: 18px;
-    }
-    &__ancre {
-        @include bouton;
-        &:hover, &:focus {
-            @include bouton--hover;
-        }
-    }
-}
-.fonctionnement {
-    &__titre {
-        padding: 20px 25px;
-    }
-    &__liste {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-    }
-}
-.etape {
-    margin: 12px 4% 12px 30px;
-    width: 88%;
-    position: relative;
-    &__div {
-        display: flex;
-        align-items: center;
-        background-color: #EEE;
-        padding: 25px;
-        border-radius: 25px;
-        @include shadow;
-    }
-    &__icon {
-        width: 40px;
-        color: #666;
-        font-size: 22px;
-    }
-    &__p {
-        font-size: 18px;
-        font-weight: bold;
-    }
-    &__num {
-        font-size: 18px;
-        height: 25px;
-        width: 30px;
-        border-radius: 50%;
-        background-color: $primaire;
-        color: white;
-        text-align: center;
-        padding-top: 5px;
-        position: absolute;
-        top: 22px;
-        left: -15px;
-        z-index: 0;
-    }
-}
-.restaurants {
-    margin-top: 50px;
-    padding: 40px 0 60px 0;
-    scroll-margin-top: 40px;
-    background-color: #EEE;
-    &__titre {
-        margin: 0 0 10px 25px;
-    }
-    &__liste {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-}
-.resto {
-    height: 280px;
-    width: 90%;
-    margin: 15px 0px;
-    border-radius: 25px;
-    overflow: hidden;
-    background-color: white;
-    position: relative;
-    z-index: 0;
-    transition: box-shadow 0.4s linear, transform 0.4s;
-    animation: 1.5s ease-out load;
-    @include shadow;
-    &:hover, &:focus {
-        box-shadow: -2px 6px 20px 2px #666;
-        transform: scale(1.002);
-    }
-    &__photo {
-        height: 200px;
-        width: 100%;
-        object-fit: cover;
-    }
-    &__infos {
-        height: 80px;
-        padding: 10px 5%;
-        font-size: 18px;
-    }
-    &__nom {
-        margin-bottom: 5px;
-    }
-    &__fav {
-        font-size: 30px;
-        color: #666;
-        position: absolute;
-        z-index: 1;
-        right: 20px;
-        bottom: 30px;
-        &--faved {
-            font-size: 32px;
-            color: transparent;
-            position: absolute;
-            z-index: 1;
-            right: 19px;
-            bottom: 29px;
-            &:hover, &:focus {
-                background: linear-gradient($primaire, $secondaire);
-                -webkit-background-clip: text;
-                -moz-background-clip: text;
-                background-clip: text;
-            }
-        }
-    }
-}
-.footer {
-    background-color: #222;
-    padding: 30px 0;
-    &__svg {
-        height: 21px;
-        margin-bottom: 15px;
-        margin-left: -10px;
-    }
-    &__li {
-        margin-left: 25px;
-    }
-    &__lien {
-        color: white;
-        font-size: 18px;
-        line-height: 40px;
-        i {
-            color: white;
-            font-size: 18px;
-            width: 35px;
-        }
-        &:hover, &:focus {
-            text-decoration: underline;
-        }
-    }
-}
-.top {
-    height: 240px;
-    width: 100%;
-    margin-bottom: -30px;
-    padding-top: 60px;
-    overflow: hidden;
-    &__photo {
-        height: 240px;
-        width: 100%;
-        position: fixed;
-        z-index: -1;
-        object-fit: cover;
-    }
-}
-.menuMaker {
-    background-color: #F6F6F6;
-    padding-top: 25px;
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
-    &__topDiv {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        &__titre {
-            font-family: 'shrikhand';
-            font-size: 27px;
-            padding: 0 14% 0 4%;
-        }
-        &__fav {
-            font-size: 30px;
-            color: #666;
-            position: absolute;
-            z-index: 1;
-            right: 5%;
-            &--faved {
-                font-size: 30px;
-                color: transparent;
-                background: none;
-                position: absolute;
-                z-index: 1;
-                right: 5%;
-                &:hover, &:focus {
-                    background: linear-gradient($primaire, $secondaire);
-                    -webkit-background-clip: text;
-                    -moz-background-clip: text;
-                    background-clip: text;
-                }
-            }
-        }
-    }
-    &__partie {
-        width: 45px;
-        margin-left: 1%;
-        padding: 30px 0 5px 0;
-        color: #555;
-        font-weight: normal;
-        font-size: 18px;
-        border-bottom: 4px solid $tertiaire;
-    }
-    &__liste {
-        padding: 0 4%;
-    }
-    &__bottomDiv {
-        height: 150px;
-        padding-bottom: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        &__valider {
-            @include bouton;
-            padding: 20px 50px;
-            &:hover, &:focus {
-                @include bouton--hover;
-            }
-        }
-    }
-}
-.assiette {
-    width: max;
-    background-color: white;
-    border-radius: 16px;
-    height: 70px;
-    margin: 20px 0;
-    overflow: hidden;
-    position: relative;
-    animation: 1.5s ease-out load;
-    @include shadow;
-    &__lien {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-end;
-    }
-    &__description {
-        line-height: 24px;
-        font-size: 16px;
-        padding: 0 0 10px 10px;
-        width: calc(100% - 50px);
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-    &__nom {
-        font-size: 18px;
-        font-weight: bold;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-         
-    }
-    &__prix {
-        line-height: 24px;
-        font-size: 16px;
-        font-weight: bold;
-        padding: 0 15px 10px 0;
-    }
-    &__select {
-        width: 0px;
-        height: 100%;
-        background-color: $tertiaire;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
-        transition: all 0.4s linear;
-        &__icon {
-            font-size: 24px;
-            color: white;
-            transition: all 0.4s linear;
-        }
-    }
-    &:hover &__select, &:focus &__select {
-        width: 80px;
-        &__icon {
-            transform: rotate(1turn);
-        }
-    }
-}
-@keyframes load{
-    0% {
-        opacity: 0;
-        margin-top: 40px;
-    }
-    10% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-        margin-top: 20px;
-    }
-}
-@media screen and (min-width: 768px) {
-    .description {
-        height: 180px;
-    }
-    .fonctionnement {
-        &__liste {
-            flex-direction: row;
-        }
-    }
-    .restaurants {
-        &__titre {
-            margin-left: 2.7%;
-            font-size: 27px;
-        }
-        &__liste {
-            flex-direction: row;
-            flex-wrap: wrap;
-        }
-    }
-    .resto {
-        height: 360px;
-        width: 45%;
-        margin: 20px 2.5%;
-        &__photo {
-            height: 280px;
-        }
-    }
-    .footer {
-        &__liste {
-            height: 80px;
-            display: flex;
-            flex-wrap: wrap;
-            flex-direction: column;
-        }
-    }
-    .top {
-        height: 320px;
-        &__photo {
-            height: 320px;
-        }
-    }
-    .menuMaker {
-        &__grandiv {
-            display: grid;
-            grid-template-columns: 50% 50%;
-        }
-    }
-}
-@media screen and (min-width: 1024px) {
-    .top {
-        height: 400px;
-        &__photo {
-            height: 400px;
-        }
-    }
-    .menuMaker {
-        &__grandiv {
-            grid-template-columns: 33% 33% 33%;
-        }
-    }
-} 
+/*** Fonts ***/
+@import "assets/css/fonts.scss";
+/*** Variables ***/
+@import "assets/css/variables.scss";
+/*** Mixins ***/
+@import "assets/css/mixins.scss";
+/*** Général ***/
+@import "assets/css/general.scss";
+/*** Header ***/
+@import "assets/css/header.scss";
+/*** Footer ***/
+@import "assets/css/footer.scss";
+/*** Localisation ***/
+@import "assets/css/localisation.scss";
+/*** Description ***/
+@import "assets/css/description.scss";
+/*** Fonctionnement ***/
+@import "assets/css/fonctionnement.scss";
+/*** Etape ***/
+@import "assets/css/etape.scss";
+/*** Top ***/
+@import "assets/css/top.scss";
+/*** MenuMaker ***/
+@import "assets/css/menumaker.scss";
+/*** Assiette ***/
+@import "assets/css/assiette.scss";
+/*** Animation ***/
+@import "assets/css/animations.scss";
+/*** min-width: 768px ***/
+@import "assets/css/media768px.scss";
+/*** min-width: 1024px ***/
+@import "assets/css/media1024px.scss";
