--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
+@charset "UTF-8";
+/*** Fonts ***/
 @font-face {
   font-family: "shrikhand";
-  src: url("../font/Shrikhand-Regular.ttf") format("truetype");
+  src: url("assets/font/Shrikhand-Regular.ttf") format("truetype");
   font-weight: normal;
 }
 @font-face {
   font-family: "roboto";
-  src: url("../font/Roboto-Regular.ttf") format("truetype");
+  src: url("assets/font/Roboto-Regular.ttf") format("truetype");
   font-weight: normal;
 }
 @font-face {
   font-family: "roboto";
-  src: url("../font/Roboto-Bold.ttf") format("truetype");
+  src: url("assets/font/Roboto-Bold.ttf") format("truetype");
   font-weight: bold;
 }
-/******* VARIABLES *******/
-/******* MIXINS *******/
+/*** Variables ***/
+/*** Mixins ***/
+/*** Général ***/
 * {
   text-decoration: none;
   list-style-type: none;
@@ -27,6 +30,7 @@ body {
   font-family: "roboto";
 }
 
+/*** Header ***/
 .header {
   display: flex;
   justify-content: center;
@@ -54,6 +58,34 @@ body {
   top: 18px;
 }
 
+/*** Footer ***/
+.footer {
+  background-color: #222;
+  padding: 30px 0;
+}
+.footer__svg {
+  height: 21px;
+  margin-bottom: 15px;
+  margin-left: -10px;
+}
+.footer__li {
+  margin-left: 25px;
+}
+.footer__lien {
+  color: white;
+  font-size: 18px;
+  line-height: 40px;
+}
+.footer__lien i {
+  color: white;
+  font-size: 18px;
+  width: 35px;
+}
+.footer__lien:hover, .footer__lien:focus {
+  text-decoration: underline;
+}
+
+/*** Localisation ***/
 .localisation {
   background-color: #DDD;
   display: flex;
@@ -68,6 +100,7 @@ body {
   margin-right: 15px;
 }
 
+/*** Description ***/
 .description {
   background-color: #EEE;
   height: 220px;
@@ -102,6 +135,7 @@ body {
   box-shadow: inset -5px -20px 70px -15px #FF79DA;
 }
 
+/*** Fonctionnement ***/
 .fonctionnement__titre {
   padding: 20px 25px;
 }
@@ -112,6 +146,7 @@ body {
   width: 100%;
 }
 
+/*** Etape ***/
 .etape {
   margin: 12px 4% 12px 30px;
   width: 88%;
@@ -218,32 +253,7 @@ body {
   background-clip: text;
 }
 
-.footer {
-  background-color: #222;
-  padding: 30px 0;
-}
-.footer__svg {
-  height: 21px;
-  margin-bottom: 15px;
-  margin-left: -10px;
-}
-.footer__li {
-  margin-left: 25px;
-}
-.footer__lien {
-  color: white;
-  font-size: 18px;
-  line-height: 40px;
-}
-.footer__lien i {
-  color: white;
-  font-size: 18px;
-  width: 35px;
-}
-.footer__lien:hover, .footer__lien:focus {
-  text-decoration: underline;
-}
-
+/*** Top ***/
 .top {
   height: 240px;
   width: 100%;
@@ -259,6 +269,7 @@ body {
   object-fit: cover;
 }
 
+/*** MenuMaker ***/
 .menuMaker {
   background-color: #F6F6F6;
   padding-top: 25px;
@@ -329,6 +340,7 @@ body {
   box-shadow: inset -5px -20px 70px -15px #FF79DA;
 }
 
+/*** Assiette ***/
 .assiette {
   width: max;
   background-color: white;
@@ -390,6 +402,7 @@ body {
   transform: rotate(1turn);
 }
 
+/*** Animation ***/
 @keyframes load {
   0% {
     opacity: 0;
@@ -403,6 +416,7 @@ body {
     margin-top: 20px;
   }
 }
+/*** min-width: 768px ***/
 @media screen and (min-width: 768px) {
   .description {
     height: 180px;
@@ -449,6 +463,7 @@ body {
     grid-template-columns: 50% 50%;
   }
 }
+/*** min-width: 1024px ***/
 @media screen and (min-width: 1024px) {
   .top {
     height: 400px;
