--- a/main.scss
+++ b/main.scss
@@ -6,6 +6,8 @@
 @import "assets/css/mixins.scss";
 /*** Général ***/
 @import "assets/css/general.scss";
+/*** Spinner ***/
+@import "assets/css/spinner.scss";
 /*** Header ***/
 @import "assets/css/header.scss";
 /*** Footer ***/
@@ -18,6 +20,8 @@
 @import "assets/css/fonctionnement.scss";
 /*** Etape ***/
 @import "assets/css/etape.scss";
+/*** Restaurants ***/
+@import "assets/css/restaurants.scss";
 /*** Top ***/
 @import "assets/css/top.scss";
 /*** MenuMaker ***/
