--- a/assets/css/localisation.scss
+++ b/assets/css/localisation.scss
@@ -6,7 +6,7 @@
     font-size: 18px;
     height: 60px;
     width: 100%;
-    margin-top: 60px;
+    padding-top: 60px;
     i {
         margin-right: 15px;
     }
