--- a/assets/css/menumaker.scss
+++ b/assets/css/menumaker.scss
@@ -7,29 +7,46 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        position: relative;
         &__titre {
             font-family: 'shrikhand';
             font-size: 27px;
             padding: 0 14% 0 4%;
         }
         &__fav {
+            width: 40px;
+            height: 40px;
+            display: flex;
+            text-align: center;
             font-size: 30px;
             color: #666;
             position: absolute;
             z-index: 1;
+            top: 8px;
             right: 5%;
+            bottom: 30px;
             &--faved {
-                font-size: 30px;
+                width: 40px;
+                height: 11px;
+                padding-top: 30px;
+                display: flex;
+                text-align: center;
+                font-size: 0px;
                 color: transparent;
-                background: none;
                 position: absolute;
-                z-index: 1;
+                z-index: 2;
+                top: 8px;
                 right: 5%;
+                background: linear-gradient($primaire, $secondaire);
+                -webkit-background-clip: text;
+                -moz-background-clip: text;
+                background-clip: text;
+                bottom: 30px;
+                transition: all 0.6s ease-out;
                 &:hover, &:focus {
-                    background: linear-gradient($primaire, $secondaire);
-                    -webkit-background-clip: text;
-                    -moz-background-clip: text;
-                    background-clip: text;
+                    font-size: 30px;
+                    height: 40px;
+                    padding-top: 0px;
                 }
             }
         }
