--- a/assets/css/general.scss
+++ b/assets/css/general.scss
@@ -3,7 +3,7 @@
     list-style-type: none;
     color: black;
     margin: 0;
-    padding-inline-start: 0;
+    -webkit-padding-start: 0;
 }
 body {
     font-family: 'roboto';
